add georeference to transform_util

--- a/transform_util/CMakeLists.txt
+++ b/transform_util/CMakeLists.txt
@@ -15,4 +15,5 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 rosbuild_add_library(${PROJECT_NAME} 
-  src/gps_transforms.cpp)
+  src/gps_transforms.cpp
+  src/georeference.cpp)
