add compiler links

--- a/transform_util/CMakeLists.txt
+++ b/transform_util/CMakeLists.txt
@@ -14,6 +14,9 @@ rosbuild_init()
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
+find_package(OpenCV REQUIRED)
+
 rosbuild_add_library(${PROJECT_NAME} 
   src/gps_transforms.cpp
   src/georeference.cpp)
+target_link_libraries(${PROJECT_NAME} yaml-cpp proj ${OpenCV_LIBRARIES})
