add generic transform class to expand functionality of tf transforms to include coordinate frames such as WGS84 lat/lon and UTM

--- a/transform_util/CMakeLists.txt
+++ b/transform_util/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(OpenCV REQUIRED)
 rosbuild_add_library(${PROJECT_NAME} 
   src/gps_transforms.cpp
   src/georeference.cpp
-  src/local_xy_util.cpp)
+  src/local_xy_util.cpp
+  src/transform.cpp)
   
 target_link_libraries(${PROJECT_NAME} yaml-cpp proj ${OpenCV_LIBRARIES})
