--- a/opencv_util/CMakeLists.txt
+++ b/opencv_util/CMakeLists.txt
@@ -19,5 +19,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 rosbuild_add_boost_directories()
 
 rosbuild_add_library(${PROJECT_NAME} 
+  src/models.cpp
+  src/model_fit.cpp
   src/show.cpp)
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
