--- a/build_tools/CMakeLists.txt
+++ b/build_tools/CMakeLists.txt
@@ -13,10 +13,4 @@ rosbuild_init()
 rosbuild_find_ros_package(build_tools)
 include(${build_tools_PACKAGE_PATH}/scripts/build_common.cmake)
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-rosbuild_add_library(${PROJECT_NAME}
-  src/progress_bar.cpp)
+include(scripts/build_common.cmake)
