--- a/opencv_util/CMakeLists.txt
+++ b/opencv_util/CMakeLists.txt
@@ -12,6 +12,8 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 find_package(OpenCV REQUIRED)
 
 rosbuild_init()
+rosbuild_find_ros_package(build_tools)
+include(${build_tools_PACKAGE_PATH}/scripts/build_common.cmake)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
