--- a/image_util/CMakeLists.txt
+++ b/image_util/CMakeLists.txt
@@ -29,11 +29,17 @@ rosbuild_add_library(${PROJECT_NAME}
   src/image_warp_util.cpp)
 target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES})
 
+rosbuild_add_library(${PROJECT_NAME}_nodelets
+  src/nodelets/rotate_image_nodelet.cpp)
+target_link_libraries(${PROJECT_NAME}_nodelets ${PROJECT_NAME})
+
 # NODES
 rosbuild_add_executable(normalization_image_generator_node src/nodes/normalization_image_generator_node.cpp)
 target_link_libraries(normalization_image_generator_node ${PROJECT_NAME})
 
 rosbuild_add_executable(dummy_image_publisher src/nodes/dummy_image_publisher.cpp)
+
+rosbuild_add_executable(rotate_image src/nodes/rotate_image.cpp)
 
 # TESTS
 rosbuild_add_executable(test_geometry_util test/test_geometry_util.cpp)
