add nodelet to contrast stretch an image

--- a/image_util/CMakeLists.txt
+++ b/image_util/CMakeLists.txt
@@ -30,7 +30,8 @@ rosbuild_add_library(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} ${QT_LIBRARIES})
 
 rosbuild_add_library(${PROJECT_NAME}_nodelets
-  src/nodelets/rotate_image_nodelet.cpp)
+  src/nodelets/rotate_image_nodelet.cpp
+  src/nodelets/contrast_stretch_nodelet.cpp)
 target_link_libraries(${PROJECT_NAME}_nodelets ${PROJECT_NAME})
 
 # NODES
@@ -40,6 +41,8 @@ target_link_libraries(normalization_image_generator_node ${PROJECT_NAME})
 rosbuild_add_executable(dummy_image_publisher src/nodes/dummy_image_publisher.cpp)
 
 rosbuild_add_executable(rotate_image src/nodes/rotate_image.cpp)
+
+rosbuild_add_executable(contrast_stretch src/nodes/contrast_stretch.cpp)
 
 # TESTS
 rosbuild_add_executable(test_geometry_util test/test_geometry_util.cpp)
