--- a/string_util/CMakeLists.txt
+++ b/string_util/CMakeLists.txt
@@ -24,7 +24,7 @@ target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   
-  add_rostest_gtest(test_string_util test/test_string_util.cpp)
+  add_rostest_gtest(test_string_util test/string_util.test test/test_string_util.cpp)
   target_link_libraries(test_string_util ${PROJECT_NAME})
 endif()
 
