updates to utility functions

--- a/opencv_util/CMakeLists.txt
+++ b/opencv_util/CMakeLists.txt
@@ -32,6 +32,7 @@ rosbuild_add_boost_directories()
 rosbuild_add_library(${PROJECT_NAME} 
   src/models.cpp
   src/model_fit.cpp
-  src/show.cpp)
+  src/show.cpp
+  src/convert.cpp)
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
 rosbuild_link_boost(${PROJECT_NAME} random)
