(can_util) Fixing marti_can_msgs dependency.
Catkin is the worst.  Adding a package as a build dependency doesn't
guarantee that the package is actually built first.  This commit adds
a call to add_dependencies() as described in

http://answers.ros.org/question/52744/how-to-specify-dependencies-with-foo_msgs-catkin-packages/

Note that this is still kind of a hacky fix, but there isn't a better
way yet as far as I can tell.  The purpose of this package is to
provide the CanBus class which is defined inline in a header.  Since
this isn't a build target, there is no way to assign a dependency.
Instead, the dependency is assigned to the example executable.

--- a/can_util/CMakeLists.txt
+++ b/can_util/CMakeLists.txt
@@ -20,6 +20,7 @@ include(${build_tools_PACKAGE_PATH}/scripts/build_common.cmake)
 include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_executable(can_bus_example src/nodes/can_bus_example.cpp)
+add_dependencies(can_bus_example marti_can_msgs_generate_messages_cpp)
 target_link_libraries(can_bus_example ${catkin_LIBRARIES})
 
 install(DIRECTORY include/${PROJECT_NAME}/
