implement cubic spline interpolation

--- a/geometry_util/CMakeLists.txt
+++ b/geometry_util/CMakeLists.txt
@@ -14,5 +14,6 @@ include_directories(include ${OpenCV_INCLUDE_DIRS} ${GEOS_INCLUDE_DIRS})
 add_library(${PROJECT_NAME}
   src/intersection.cpp
   src/polygon.cpp
-  src/geometry_util.cpp)
+  src/geometry_util.cpp
+  src/cubic_spline.cpp)
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES} ${GEOS_LIBRARIES})
