--- a/can_util/package.xml
+++ b/can_util/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="2">
   <name>can_util</name>
   <version>0.0.1</version>
   <description>
@@ -13,13 +13,10 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>marti_can_msgs</build_depend>
   <build_depend>build_tools</build_depend>
   
-  <run_depend>roscpp</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>marti_can_msgs</run_depend>
+  <depend>roscpp</depend>
+  <depend>rospy</depend>
+  <depend>marti_can_msgs</depend>
   
 </package>
