--- a/geometry_util/package.xml
+++ b/geometry_util/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="2">
   <name>geometry_util</name>
   <version>0.0.1</version>
   <description>
@@ -12,9 +12,8 @@
   <url>https://github.com/swri-robotics/marti_common</url>
   
   <buildtool_depend>catkin</buildtool_depend>
-  
-  <build_depend>roscpp</build_depend>
+
   <build_depend>build_tools</build_depend>
   
-  <run_depend>roscpp</run_depend>
+  <depend>roscpp</depend>
 </package>
