--- a/system_util/package.xml
+++ b/system_util/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="2">
   <name>system_util</name>
   <version>0.0.1</version>
   <description>
@@ -13,8 +13,8 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   
-  <build_depend>roscpp</build_depend>
   <build_depend>build_tool</build_depend>
   
-  <run_depend>roscpp</run_depend>
+  <depend>roscpp</depend>
+
 </package>
