remove dependencies on build_tools

--- a/can_util/CMakeLists.txt
+++ b/can_util/CMakeLists.txt
@@ -2,20 +2,13 @@ cmake_minimum_required(VERSION 2.4.6)
 project(can_util)
 
 find_package(catkin REQUIRED COMPONENTS 
-  roscpp rospy marti_can_msgs build_tools)
+  roscpp rospy marti_can_msgs)
 
 catkin_package(
   INCLUDE_DIRS include
   DEPENDS libqt4
   CATKIN_DEPENDS roscpp rospy marti_can_msgs
 )
-
-execute_process(
-  COMMAND rospack find build_tools
-  ERROR_VARIABLE __null
-  OUTPUT_VARIABLE build_tools_PACKAGE_PATH
-  OUTPUT_STRIP_TRAILING_WHITESPACE)
-include(${build_tools_PACKAGE_PATH}/scripts/build_common.cmake)
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
