--- a/marti_data_structures/CMakeLists.txt
+++ b/marti_data_structures/CMakeLists.txt
@@ -1,16 +1,10 @@
 cmake_minimum_required(VERSION 2.4.6)
 project(marti_data_structures)
 
-find_package(catkin REQUIRED COMPONENTS build_tools)
+find_package(catkin REQUIRED)
+
 catkin_package(
   INCLUDE_DIRS include)
-
-execute_process(
-  COMMAND rospack find build_tools
-  ERROR_VARIABLE __null
-  OUTPUT_VARIABLE build_tools_PACKAGE_PATH
-  OUTPUT_STRIP_TRAILING_WHITESPACE)
-include(${build_tools_PACKAGE_PATH}/scripts/build_common.cmake)
 
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
