--- a/string_util/CMakeLists.txt
+++ b/string_util/CMakeLists.txt
@@ -1,19 +1,12 @@
 cmake_minimum_required(VERSION 2.4.6)
 project(string_util)
 
-find_package(catkin REQUIRED COMPONENTS build_tools)
+find_package(catkin REQUIRED)
 
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
 )
-
-execute_process(
-  COMMAND rospack find build_tools
-  ERROR_VARIABLE __null
-  OUTPUT_VARIABLE build_tools_PACKAGE_PATH
-  OUTPUT_STRIP_TRAILING_WHITESPACE)
-include(${build_tools_PACKAGE_PATH}/scripts/build_common.cmake)
 
 include_directories(include ${catkin_INCLUDE_DIRS})
   
