remove build_tools reference

--- a/yaml_util/CMakeLists.txt
+++ b/yaml_util/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.4.6)
 project(yaml_util)
 
-find_package(catkin REQUIRED COMPONENTS build_tools)
+find_package(catkin REQUIRED)
 
 catkin_package(
   INCLUDE_DIRS include
