--- a/image_util/CMakeLists.txt
+++ b/image_util/CMakeLists.txt
@@ -20,7 +20,15 @@ find_package(catkin REQUIRED COMPONENTS
 
 find_package(OpenCV)
 find_package(Qt4 REQUIRED)
-find_package(Boost REQUIRED COMPONENTS filesystem system)
+find_package(Boost REQUIRED COMPONENTS filesystem system random)
+
+# The Boost Random library headers and namespaces changed between version
+# 1.46 and 1.47
+find_package(Boost COMPONENTS random) 
+if(${Boost_LIB_VERSION} MATCHES "1_46*")
+  add_definitions( -DBOOST_1_46 )
+endif(${Boost_LIB_VERSION} MATCHES "1_46*")
+
 find_package(Eigen REQUIRED)
 add_definitions(${EIGEN_DEFINITIONS})
 
@@ -47,7 +55,7 @@ catkin_package(
     image_transport
 )
 
-include_directories(include ${catkin_INCLUDE_DIRS} ${QT_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS} ${EIGEN_INCLUDE_DIRS})
+include_directories(include ${catkin_INCLUDE_DIRS} ${QT_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS} ${EIGEN_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
 add_library(${PROJECT_NAME} 
   src/image_normalization.cpp 
@@ -56,7 +64,7 @@ add_library(${PROJECT_NAME}
   src/draw_util.cpp
   src/geometry_util.cpp
   src/image_warp_util.cpp)
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${QT_LIBRARIES} ${OpenCV_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${QT_LIBRARIES} ${OpenCV_LIBRARIES} ${Boost_LIBRARIES})
 
 add_library(${PROJECT_NAME}_nodelets
   src/nodelets/rotate_image_nodelet.cpp
@@ -92,10 +100,10 @@ if(CATKIN_ENABLE_TESTING)
   target_link_libraries(test_motion_estimation ${PROJECT_NAME})
 
   add_rostest_gtest(image_warp_tests launch/warp_util.test test/image_warp_tests.cpp)
-  target_link_libraries(image_warp_tests ${PROJECT_NAME} ${Boost_LIBRARIES})
+  target_link_libraries(image_warp_tests ${PROJECT_NAME})
 
   add_rostest_gtest(image_normalization_tests launch/image_normalization.test test/image_normalization_tests.cpp)
-  target_link_libraries(image_normalization_tests ${PROJECT_NAME} ${Boost_LIBRARIES})
+  target_link_libraries(image_normalization_tests ${PROJECT_NAME})
 endif()
 
 install(DIRECTORY include/${PROJECT_NAME}/
