--- a/yaml_util/CMakeLists.txt
+++ b/yaml_util/CMakeLists.txt
@@ -18,13 +18,13 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 find_package(PkgConfig)
 pkg_check_modules(YamlCpp yaml-cpp)
-message ("YAML-CPP VERSION: " ${YamlCpp_VERSION})
+message(STATUS "YAML-CPP VERSION: " ${YamlCpp_VERSION})
 if( ${YamlCpp_VERSION} MATCHES "0.[23].*")
   set(YAMLCPP_OLD_API ON)
-  message ("  Using old yaml-cpp API.")
+  message(STATUS "  Using old yaml-cpp API.")
 else( ${YamlCpp_VERSION} MATCHES "0.[23].*")
   set(YAMLCPP_OLD_API OFF)
-  message ("  Using new yaml-cpp API.")
+  message(STATUS "  Using new yaml-cpp API.")
 endif( ${YamlCpp_VERSION} MATCHES "0.[23].*")
 configure_file(version.h.in ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/version.h)
 
