--- a/transform_util/package.xml
+++ b/transform_util/package.xml
@@ -18,6 +18,8 @@
   <depend>rospy</depend>
   <depend>tf</depend>
   <depend>pluginlib</depend>
+  <depend>topic_tools</depend>
+  <depend>geographic_msgs</depend>
   <depend>gps_common</depend>
   <depend>diagnostic_msgs</depend>
   <depend>math_util</depend>
