--- a/swri_geometry_util/CMakeLists.txt
+++ b/swri_geometry_util/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 2.8.3)
 
 project(swri_geometry_util)
 
-find_package(catkin REQUIRED COMPONENTS roscpp cmake_modules)
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  cmake_modules
+)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
 find_package(GEOS REQUIRED)
