--- a/swri_console_util/package.xml
+++ b/swri_console_util/package.xml
@@ -13,6 +13,8 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   
+  <depend>libopencv-dev</depend>
   <depend>roscpp</depend>
+  <depend>swri_math_util</depend>
 
 </package>
