--- a/image_util/package.xml
+++ b/image_util/package.xml
@@ -10,24 +10,26 @@
   <maintainer email="kkozak@swri.org">Kris Kozak</maintainer>
   <license>BSD</license>
   <url>https://github.com/swri-robotics/marti_common</url>
-  
+ 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>roscpp</depend>
-  <depend>rospy</depend>
-  <depend>roslib</depend>
-  <depend>std_msgs</depend>
-  <depend>nodelet</depend>
-  <depend>cv_bridge</depend>
-  <depend>tf</depend>
+  <depend>camera_calibration_parsers</depend>
   <depend>cmake_modules</depend>
+  <depend>cv_bridge</depend>
   <depend>geometry_msgs</depend>
   <depend>image_geometry</depend>
-  <depend>nav_msgs</depend>
-  <depend>camera_calibration_parsers</depend>
-  <depend>math_util</depend>
-  <depend>opencv_util</depend>
   <depend>image_transport</depend>
+  <depend>math_util</depend>
+  <depend>nav_msgs</depend>
+  <depend>nodelet</depend>
+  <depend>opencv_util</depend>
+  <depend>roscpp</depend>
+  <depend>roslib</depend>
+  <depend>rospy</depend>
+  <depend>std_msgs</depend>
+  <depend>tf</depend>
+
+  <test_depend>rostest</test_depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
