Adds missing system dependencies.

--- a/geometry_util/package.xml
+++ b/geometry_util/package.xml
@@ -12,7 +12,7 @@
   <url>https://github.com/swri-robotics/marti_common</url>
   
   <buildtool_depend>catkin</buildtool_depend>
-  
+  <depend>eigen</depend>  
   <depend>roscpp</depend>
   <depend>cmake_modules</depend>
 </package>
