Renames math_util to swri_math_util. Refs #231.

--- a/opencv_util/package.xml
+++ b/opencv_util/package.xml
@@ -14,7 +14,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   
   <depend>libopencv-dev</depend>
-  <depend>math_util</depend>
+  <depend>swri_math_util</depend>
 
 </package>
 
