Renames math_util to swri_math_util. Refs #231.

--- a/opencv_util/package.xml
+++ b/opencv_util/package.xml
@@ -13,8 +13,8 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   
-  <depend>opencv2</depend>
-  <depend>math_util</depend>
+  <depend>libopencv-dev</depend>
+  <depend>swri_math_util</depend>
 
 </package>
 
