--- a/swri_image_util/package.xml
+++ b/swri_image_util/package.xml
@@ -23,6 +23,9 @@
   <depend>cmake_modules</depend>
   <depend>geometry_msgs</depend>
   <depend>image_geometry</depend>
+  <depend>image_transport</depend>
+  <depend>libqt4-dev</depend>
+  <depend>swri_math_util</depend>
   <depend>nav_msgs</depend>
   <depend>camera_calibration_parsers</depend>
   <depend>math_util</depend>
