--- a/transform_util/CMakeLists.txt
+++ b/transform_util/CMakeLists.txt
@@ -10,8 +10,9 @@ find_package(catkin REQUIRED COMPONENTS
   geographic_msgs
   gps_common
   diagnostic_msgs
-  math_util
-  yaml_util)
+  swri_math_util
+  yaml_util
+)
 
 find_package(OpenCV REQUIRED)
 
@@ -27,7 +28,7 @@ catkin_package(
     geographic_msgs
     gps_common
     diagnostic_msgs
-    math_util
+    swri_math_util
     yaml_util
 )
 
