--- a/transform_util/package.xml
+++ b/transform_util/package.xml
@@ -22,7 +22,7 @@
   <depend>geographic_msgs</depend>
   <depend>gps_common</depend>
   <depend>diagnostic_msgs</depend>
-  <depend>math_util</depend>
+  <depend>swri_math_util</depend>
   <depend>yaml_util</depend>
   
   <export>
