--- a/swri_prefix_tools/CMakeLists.txt
+++ b/swri_prefix_tools/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(prefix_tools)
+project(swri_prefix_tools)
 
 find_package(catkin REQUIRED)
 catkin_package()
