Renames string_util to swri_string_util. Refs #231.

--- a/swri_string_util/package.xml
+++ b/swri_string_util/package.xml
@@ -1,9 +1,9 @@
 <package format="2">
-  <name>string_util</name>
+  <name>swri_string_util</name>
   <version>0.0.1</version>
   <description>
 
-     string_util
+     swri_string_util
 
   </description>
   <author>Marc Alban</author>
